--- a/payments/cn/guides/amounts-and-balances.mdx
+++ b/payments/cn/guides/amounts-and-balances.mdx
@@ -1,40 +1,49 @@
 ---
-title: "资金分配与余额管理"
+title: "账户与资金分配"
 lang: "zh-hans"
 ---
-Cobo 为您维护两类资金的收支记录：**商户资金**与**开发者资金**。**商户**代表实际收款的业务主体，**开发者**则代表提供收款服务的主体（即您）。所有的收款都需要指定归属的商户，并通过开发者费用/费率确定开发者应获得的收入分成。
 
-通过创建商户、设置开发者费用/费率，您可以实现自动化的资金结算和收入分成：
+本文介绍资金管理过程中涉及的各类账户，以及收款后资金如何通过**结算**与**划转**在各账户间进行高效分配和管理。
 
-- 如果您直接服务于付款方：
-  - 通常情况下仅需要创建一个商户（使用系统默认创建的商户即可），且无需配置开发者费率。
-  - 如果您想要为不同的业务线单独管理资金，则可以为每个业务线创建一个商户。
-- 如果您是服务于多个下游商户的平台型机构，则可以为每个下游商户在系统中创建一个商户，并通过设置开发者费用/费率来实现自动化的商家结算与平台收入分配。
+## 账户
 
-更多关于商户管理的使用场景和说明，可以参考[商户管理](/payments/cn/guides/merchants)。
+账户分为两种类型：
 
+- **开发者账户**：持有开发者余额的单一账户。代表作为收款服务提供方（即您）所拥有的资金。
+- **商户账户**：每个商户对应一个账户，持有各自的商户余额。每个商户代表实际收款的业务主体。
 
-## 资金分配概览
+当您执行资金转出或退款等操作时，需要选择使用哪个账户作为资金来源。
 
-下图展示了支付过程中资金的整体分配和流向（示例数据）：
+## 资金结算与划转
+
+资金可以通过两种方式在账户之间分配：
+
+- **自动结算**：在收款过程中，资金根据预设规则自动结算到商户账户和开发者账户。
+- **手动划转**：您可以使用划转功能在账户之间手动转移资金。
+
+### 自动结算
+
+收到付款后，资金会自动结算到商户账户和开发者账户。结算规则因收款模式而异。
+
+下图展示了支付过程中资金的整体自动结算和流向（示例数据）：
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
 graph TD
-    A[付款方 A<br/>100 USDT] --> B[商家 A<br/>费率：2%]
-    C[付款方 B<br/>100 USDT] --> D[商家 B<br/>费率：1.5%]
-    E[付款方 C<br/>100 USDT] --> F[商家 C<br/>费率：1%]
+    A[付款方 A<br/>100 USDT] --> B[商户 A<br/>费率：2%]
+    C[付款方 B<br/>100 USDT] --> D[商户 B<br/>费率：1.5%]
+    E[付款方 C<br/>100 USDT] --> F[商户 C<br/>费率：1%]
     
-    B --> G[商家 A 余额<br/>98 USDT]
+    B --> G[商户 A 账户<br/>98 USDT]
     B --> H[开发者费用<br/>2 USDT]
     
-    D --> I[商家 B 余额<br/>98.5 USDT]
+    D --> I[商户 B 账户<br/>98.5 USDT]
     D --> J[开发者费用<br/>1.5 USDT]
     
-    F --> K[商家 C 余额<br/>99 USDT]
+    F --> K[商户 C 账户<br/>99 USDT]
     F --> L[开发者费用<br/>1 USDT]
     
-    H --> M[开发者余额<br/>4.5 USDT]
+    H --> M[开发者账户<br/>4.5 USDT]
     J --> M
     L --> M
     
@@ -53,94 +62,73 @@ graph TD
     style M fill:#fff3e0
 ```
 
+#### 充值模式
 
-## 资金分配规则
+在充值模式下，资金结算基于创建商户时设置的开发者费率（`developer_fee_rate`）。开发者费率决定每笔充值中结算到开发者账户的比例。
 
-在不同的收款模式下，以及退款场景中，开发者费用的收取方式和计算规则各有不同。以下将详细介绍各种场景下的资金分配机制。
-
-
-### 充值模式
-
-在充值模式下，资金分配基于创建商户时设置的开发者费率（`developer_fee_rate`）。开发者费率决定每笔充值中开发者获得的比例。
-
-**示例**：当开发者费率为 1% 时，100 USDT 充值将分配为商户资金 99 USDT 和开发者费用 1 USDT。
+**示例**：当开发者费率为 1% 时，100 USDT 充值将结算为 99 USDT 到商户账户，1 USDT 到开发者账户。
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
 graph TD
     A[开发者费率：1%] --> B[付款方充值<br/>100 USDT]
     
-    B --> C[商户实收金额<br/>99 USDT]
-    B --> D[开发者费用<br/>1 USDT]
-
-    C --> E[商户余额增加<br/>99 USDT]
-    D --> F[开发者余额增加<br/>1 USDT]
-
+    B -->|99 USDT| E[商户账户<br/>+99 USDT]
+    B -->|1 USDT| F[开发者账户<br/>+1 USDT]
     
     style A fill:#e3f2fd
     style B fill:#f3e5f5
-    style C fill:#c8e6c9
-    style D fill:#fff3e0
     style E fill:#c8e6c9
     style F fill:#fff3e0
 ```
 
+#### 订单模式
 
+在订单模式下，资金结算基于创建订单时设置的金额参数。开发者费用（`fee_amount`）与商品订单金额（`order_amount`）之间的比例决定每笔订单中结算到开发者账户的比例。
 
-### 订单模式
+**示例**：当商品订单金额为 99 USDT，开发者费用为 1 USDT 时，100 USDT 的订单实收金额将结算为 99 USDT 到商户账户，1 USDT 到开发者账户：
 
-在订单模式下，资金分配基于创建订单时设置的金额参数。开发者费用（`fee_amount`）与商品订单金额（`order_amount`）之间的比例决定每笔订单中开发者获得的比例。
-
-**示例**：当商品订单金额为 99 USDT，开发者费用为 1 USDT 时，100 USDT 的订单实收金额将分配为商户实收金额 99 USDT 和开发者费用 1 USDT：
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
 graph TD
     A[商品订单金额 99 USDT<br/>开发者费用 1 USDT] --> B[付款方支付<br/>100 USDT]
     
-    B --> C[商户实收金额<br/>99 USDT]
-    B --> D[开发者费用<br/>1 USDT]
-    
-    C --> E[商户余额增加<br/>99 USDT]
-    D --> F[开发者余额增加<br/>1 USDT]
+    B -->|99 USDT| E[商户账户<br/>+99 USDT]
+    B -->|1 USDT| F[开发者账户<br/>+1 USDT]
     
     style A fill:#e3f2fd
     style B fill:#f3e5f5
-    style C fill:#c8e6c9
-    style D fill:#fff3e0
     style E fill:#c8e6c9
     style F fill:#fff3e0
 ```
 
-
-
 <Note>
 特殊情况处理：
 
-- 多付/少付：按上述相同比例分配资金
-- 晚付：资金全部记为开发者费用
+- 多付/少付：按上述相同比例结算资金
+- 晚付：资金全部结算到开发者账户
 </Note>
 
-### 退款
+#### 退款
 
-退款金额的来源可以是商户余额或开发者余额。
+退款金额的来源可以是商户账户或开发者账户。
 
- - 当退款金额来源为商户余额时，您可以指定开发者费用金额。例如，当退款金额（`payable_amount`）为 100 USDT，开发者费用（`merchant_fee_amount`）为 1 USDT 时，100 USDT 的退款金额将分配 1 USDT 作为开发者费用，付款方实际收到 99 USDT。
-- 当退款金额来源为开发者余额时，开发者费用字段将被忽略，退款金额将全额从开发者余额中扣除并转给付款方。
+- 当退款金额来源为商户账户时，您可以指定开发者费用金额。例如，当退款金额（`payable_amount`）为 100 USDT，开发者费用（`merchant_fee_amount`）为 1 USDT 时，100 USDT 的退款金额将结算 1 USDT 到开发者账户，付款方实际收到 99 USDT。
+- 当退款金额来源为开发者账户时，开发者费用字段将被忽略，退款金额将全额从开发者账户中扣除并转给付款方。
 
-
-下图展示了退款过程中资金的分配和流向（示例数据）：
+下图展示了退款过程中资金的结算和流向（示例数据）：
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
 graph TD
-    F[选择退款来源] -->|从商户余额退款| E1[创建退款订单<br/>退款金额: 100 USDT<br/>开发者费用: 1 USDT]
-    F -->|从开发者余额退款| E2[创建退款订单<br/>退款金额: 100 USDT]
+    F[选择退款来源] -->|从商户账户退款| E1[创建退款订单<br/>退款金额: 100 USDT<br/>开发者费用: 1 USDT]
+    F -->|从开发者账户退款| E2[创建退款订单<br/>退款金额: 100 USDT]
     
-    E1 --> G[从商户余额扣除 100 USDT]
-    E2 --> H[从开发者余额扣除 100 USDT]
+    E1 --> G[从商户账户<br/>扣除 100 USDT]
+    E2 --> H[从开发者账户<br/>扣除 100 USDT]
     
     G --> J[付款方实际收到<br/>99 USDT]
-    G --> K[开发者余额增加<br/>1 USDT]
+    G --> K[开发者账户<br/>+1 USDT]
     
     H --> L[向付款方转账<br/>100 USDT]
     
@@ -154,24 +142,27 @@ graph TD
     style L fill:#c8e6c9
 ```
 
+### 手动划转
+
+除了收款过程中的自动结算，您还可以使用划转功能在账户之间手动划转资金。详情请参阅[划转资金](/payments/cn/guides/allocate-funds)。
 
 ## 余额
 
-下图展示了商户余额和开发者余额的主要来源和去向：
+每个账户都有余额，代表可用资金。下图展示了商户账户余额和开发者账户余额的主要来源和去向：
 
-<Info>审查中/隔离/冻结金额将不被计入商户实收金额或开发者余额。</Info>
+<Info>
+- 下图未展示划转操作的资金流向
+- 审查中/隔离/冻结金额将不被计入账户余额
+</Info>
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
 graph TD
-    A[付款]
+    A[收款]
     
     A --> L[审查中、隔离<br>或冻结金额]
-    A --> D[商户实收金额]
-    A --> E[开发者费用]
-    
-    D --> F[商户余额]
-    E --> G[开发者余额]
+    A --> F[商户账户余额]
+    A --> G[开发者账户余额]
     
     F --> H[资金转出]
     F --> I[退款]
@@ -179,8 +170,7 @@ graph TD
     G --> J[资金转出]
     G --> K[退款]
     
-    M[退款收取的开发者费用] --> E
-    P[外部钱包转入] --> G
+    M[退款时收取的开发者费用] --> G
     
     style A fill:#e1f5fe
     style F fill:#c8e6c9
@@ -191,28 +181,23 @@ graph TD
     style K fill:#fff3e0
     style M fill:#e1f5fe
     style L fill:#ffebee
-    style P fill:#e1f5fe
 ```
 
+### 商户账户余额
 
-### 商户余额
+**商户账户余额**指某一商户账户在特定时刻可用于资金转出或退款的资金总额。
 
-**商户余额**指某一商户在特定时刻可提取或退款的资金总额。计算公式：
-
-`商户余额 = 商户实收总金额 - 已提取的商户资金 - 已用于退款的商户资金`
-
+- 增加余额：结算、划转转入
+- 减少余额：资金转出、退款、划转转出
 
 该余额可以通过 Payments App 的**余额**模块或调用 [List merchant balances](/payments/en/api-references/payment/list-merchant-balances) 进行查询。
 
+### 开发者账户余额
 
-### 开发者余额
+**开发者账户余额**指开发者账户在特定时刻可用于资金转出或退款的资金总额。
 
-**开发者余额**指开发者在特定时刻可提取或退款的资金总额。计算公式：
-
-
-`开发者余额 = 开发者费用总额 - 已提取的开发者资金 - 已用于退款的开发者资金`
-
-<Info>开发者费用总额中，除了各类收款模式中的开发者费用，还包括从外部钱包转入的资金。</Info>
+- 增加余额：结算、划转转入、退款时收取的开发者费用
+- 减少余额：资金转出、退款、划转转出
 
 该余额可以通过 Payments App 的**余额**模块或调用 [Get developer balance](/payments/en/api-references/payment/get-developer-balance) 进行查询。
 
