--- a/payments/en/guides/amounts-and-balances.mdx
+++ b/payments/en/guides/amounts-and-balances.mdx
@@ -1,25 +1,42 @@
 ---
-title: "Funds allocation and balances"
+title: "Accounts, settlement and allocation, and balances"
 lang: "en"
 ---
 
 <Note>**Disclaimer: This article contains AI translations and should only be used as reference.** Contact Cobo's support team through [help@cobo.com](mailto:help@cobo.com) if you have any questions.</Note>
 
-Cobo maintains revenue and expenditure records for two types of funds: **merchant funds** and **developer funds**. **Merchant** represents the actual business entity receiving payments, while **developer** represents the entity providing payment collection services (that is, you). All payment collection needs to specify the merchant to which it belongs, and determines the revenue share that the developer should receive through developer fees/rates.
+This topic explains how funds are organized into accounts, how funds are distributed between accounts through settlement and allocation, and how balances are calculated.
+
+## Accounts
+
+Cobo uses accounts to organize and track funds. There are two types of accounts:
+
+- **Developer account**: A single account that holds your developer balance. This represents funds belonging to you as the entity providing payment collection services.
+- **Merchant accounts**: One account per merchant that holds the respective merchant balance. Each merchant represents an actual business entity receiving payments.
+
+When you perform operations such as payouts or refunds, you need to select which account to use as the source of funds.
 
 By creating merchants and setting developer fees/rates, you can achieve automated fund settlement and revenue sharing:
 
 - If you serve payers directly:
-  - Usually, you only need to create one merchant (use the merchant created by default by the system), and no need to configure a developer fee rate.
+  - Usually, you only need to create one merchant (use the merchant created by default by the system), and there is no need to configure a developer fee rate.
   - If you want to manage funds separately for different business lines, you can create a merchant for each business line.
 - If you are a platform institution serving multiple downstream merchants, you can create a merchant in the system for each downstream merchant and achieve automated merchant settlement and platform revenue allocation by setting developer fees/rates.
 
 For more information on usage scenarios and descriptions of merchant management, refer to [Merchant management](/payments/en/guides/merchants).
 
+## Settlement and allocation
 
-## Amount allocation overview
+Funds can be distributed between accounts in two ways:
 
-The following diagram shows the overall allocation and flow of funds during the payment process (sample data):
+- **Automatic settlement**: During the pay-in process, funds are automatically settled to the merchant account and developer account based on predefined rules.
+- **Manual allocation**: You can manually allocate funds between accounts using the Allocate feature in the Payments App.
+
+### Automatic settlement
+
+When a payment is received, funds are automatically settled to the merchant account and developer account. The settlement rules differ depending on the pay-in type.
+
+The following diagram shows the overall automatic settlement and flow of funds during the payment process (sample data):
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
@@ -28,18 +45,13 @@ graph TD
     C[Payer B<br/>100 USDT] --> D[Merchant B<br/>Rate: 1.5%]
     E[Payer C<br/>100 USDT] --> F[Merchant C<br/>Rate: 1%]
     
-    B --> G[Merchant A Balance<br/>98 USDT]
-    B --> H[Developer Fee<br/>2 USDT]
+    B --> G[Merchant A Account<br/>98 USDT]
+    D --> I[Merchant B Account<br/>98.5 USDT]
+    F --> K[Merchant C Account<br/>99 USDT]
     
-    D --> I[Merchant B Balance<br/>98.5 USDT]
-    D --> J[Developer Fee<br/>1.5 USDT]
-    
-    F --> K[Merchant C Balance<br/>99 USDT]
-    F --> L[Developer Fee<br/>1 USDT]
-    
-    H --> M[Developer Balance<br/>4.5 USDT]
-    J --> M
-    L --> M
+    B -->|2 USDT| M[Developer Account<br/>4.5 USDT]
+    D -->|1.5 USDT| M
+    F -->|1 USDT| M
     
     style A fill:#e3f2fd
     style C fill:#e3f2fd
@@ -50,100 +62,76 @@ graph TD
     style G fill:#c8e6c9
     style I fill:#c8e6c9
     style K fill:#c8e6c9
-    style H fill:#fff3e0
-    style J fill:#fff3e0
-    style L fill:#fff3e0
     style M fill:#fff3e0
 ```
 
+#### Top-up mode
 
-## Amount allocation rules
+In top-up mode, fund settlement is based on the developer fee rate (`developer_fee_rate`) set when creating the merchant. The developer fee rate determines the proportion settled to the developer account in each top-up.
 
-In different pay-in types and refund scenarios, the collection method and calculation rules for developer fees differ. The following will detail the fund allocation mechanism in various scenarios.
-
-
-### Top-up mode
-
-In top-up mode, fund allocation is based on the developer fee rate (`developer_fee_rate`) set when creating the merchant. The developer fee rate determines the proportion the developer receives in each top-up.
-
-**Example**: When the developer fee rate is 1%, a 100 USDT top-up will be allocated as 99 USDT merchant funds and 1 USDT developer fee.
+**Example**: When the developer fee rate is 1%, a 100 USDT top-up will be settled as 99 USDT to the merchant account and 1 USDT to the developer account.
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
 graph TD
     A[Developer fee rate: 1%] --> B[Payer top-up<br/>100 USDT]
     
-    B --> C[Merchant actual receipt<br/>99 USDT]
-    B --> D[Developer fee<br/>1 USDT]
-
-    C --> E[Merchant balance increases<br/>99 USDT]
-    D --> F[Developer balance increases<br/>1 USDT]
-
+    B -->|99 USDT| E[Merchant account<br/>+99 USDT]
+    B -->|1 USDT| F[Developer account<br/>+1 USDT]
     
     style A fill:#e3f2fd
     style B fill:#f3e5f5
-    style C fill:#c8e6c9
-    style D fill:#fff3e0
     style E fill:#c8e6c9
     style F fill:#fff3e0
 ```
 
+#### Order mode
 
+In order mode, fund settlement is based on the amount parameters set when creating the order. The ratio between the developer fee (`fee_amount`) and the product order amount (`order_amount`) determines the proportion settled to the developer account in each order.
 
-### Order mode
+**Example**: When the product order amount is 99 USDT and the developer fee is 1 USDT, the actual received amount of 100 USDT from the order will be settled as 99 USDT to the merchant account and 1 USDT to the developer account:
 
-In order mode, fund allocation is based on the amount parameters set when creating the order. The ratio between the developer fee (`fee_amount`) and the product order amount (`order_amount`) determines the proportion the developer receives in each order.
-
-**Example**: When the product order amount is 99 USDT and the developer fee is 1 USDT, the actual received amount of 100 USDT from the order will be allocated as 99 USDT merchant actual receipt and 1 USDT developer fee:
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
 graph TD
     A[Product order amount 99 USDT<br/>Developer fee 1 USDT] --> B[Payer payment<br/>100 USDT]
     
-    B --> C[Merchant actual receipt<br/>99 USDT]
-    B --> D[Developer fee<br/>1 USDT]
-    
-    C --> E[Merchant balance increases<br/>99 USDT]
-    D --> F[Developer balance increases<br/>1 USDT]
+    B -->|99 USDT| E[Merchant account<br/>+99 USDT]
+    B -->|1 USDT| F[Developer account<br/>+1 USDT]
     
     style A fill:#e3f2fd
     style B fill:#f3e5f5
-    style C fill:#c8e6c9
-    style D fill:#fff3e0
     style E fill:#c8e6c9
     style F fill:#fff3e0
 ```
 
-
-
 <Note>
 Special case handling:
 
-- Overpayment/Underpayment: Allocate funds according to the same ratio as above
-- Late payment: All funds are recorded as developer fee
+- Overpayment/Underpayment: Settle funds according to the same ratio as above
+- Late payment: All funds are settled to the developer account
 </Note>
 
-### Refunds
+#### Refunds
 
-The source of the refund amount can be either the merchant balance or the developer balance.
+The source of the refund amount can be either the merchant account or the developer account.
 
- - When the refund amount comes from the merchant balance, you can specify the developer fee amount. For example, when the refund amount (`payable_amount`) is 100 USDT and the developer fee (`merchant_fee_amount`) is 1 USDT, 1 USDT from the 100 USDT refund amount will be allocated as the developer fee, and the payer will actually receive 99 USDT.
-- When the refund amount comes from the developer balance, the developer fee field will be ignored, and the full refund amount will be deducted from the developer balance and transferred to the payer.
-
+- When the refund amount comes from the merchant account, you can specify the developer fee amount. For example, when the refund amount (`payable_amount`) is 100 USDT and the developer fee (`merchant_fee_amount`) is 1 USDT, 1 USDT from the 100 USDT refund amount will be allocated to the developer account, and the payer will actually receive 99 USDT.
+- When the refund amount comes from the developer account, the developer fee field will be ignored, and the full refund amount will be deducted from the developer account and transferred to the payer.
 
 The following diagram shows the allocation and flow of funds during the refund process (sample data):
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
 graph TD
-    F[Select refund source] -->|Refund from merchant balance| E1[Create refund order<br/>Refund amount: 100 USDT<br/>Developer fee: 1 USDT]
-    F -->|Refund from developer balance| E2[Create refund order<br/>Refund amount: 100 USDT]
+    F[Select refund source] -->|Refund from merchant account| E1[Create refund order<br/>Refund amount: 100 USDT<br/>Developer fee: 1 USDT]
+    F -->|Refund from developer account| E2[Create refund order<br/>Refund amount: 100 USDT]
     
-    E1 --> G[Deduct 100 USDT from merchant balance]
-    E2 --> H[Deduct 100 USDT from developer balance]
+    E1 --> G[Deduct 100 USDT from<br/>merchant account]
+    E2 --> H[Deduct 100 USDT from<br/>developer account]
     
     G --> J[Payer actually receives<br/>99 USDT]
-    G --> K[Developer balance increases<br/>1 USDT]
+    G --> K[Developer account<br/>+1 USDT]
     
     H --> L[Transfer to payer<br/>100 USDT]
     
@@ -157,12 +145,15 @@ graph TD
     style L fill:#c8e6c9
 ```
 
+### Manual allocation
 
-## Balance
+In addition to automatic settlement during pay-in, you can manually allocate funds between accounts using the Allocate feature in the Payments App. For more information, see [Allocate funds](/payments/en/guides/allocate-funds).
 
-The following diagram shows the main sources and uses of merchant balance and developer balance:
+## Balances
 
-<Info>Under review/isolated/frozen amounts will not be counted towards merchant actual receipt or developer balance.</Info>
+Each account has a balance that represents the available funds. The following diagram shows the main sources and uses of merchant account balances and developer account balances:
+
+<Info>Under review/isolated/frozen amounts will not be counted towards account balances.</Info>
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
@@ -170,11 +161,8 @@ graph TD
     A[Payment]
     
     A --> L[Under review, isolated<br>or frozen amount]
-    A --> D[Merchant actual receipt]
-    A --> E[Developer fee]
-    
-    D --> F[Merchant balance]
-    E --> G[Developer balance]
+    A --> F[Merchant account balance]
+    A --> G[Developer account balance]
     
     F --> H[Payout]
     F --> I[Refund]
@@ -182,7 +170,7 @@ graph TD
     G --> J[Payout]
     G --> K[Refund]
     
-    M[Developer fee collected from refunds] --> E
+    M[Developer fee collected from refunds] --> G
     P[Transfer from external wallet] --> G
     
     style A fill:#e1f5fe
@@ -197,27 +185,22 @@ graph TD
     style P fill:#e1f5fe
 ```
 
+### Merchant account balance
 
-### Merchant balance
+**Merchant account balance** refers to the total amount of funds in a merchant account that can be used for payouts or refunds at a specific moment.
 
-**Merchant balance** refers to the total amount of funds that a merchant can withdraw or refund at a specific moment. Calculation formula:
-
-`Merchant balance = Total merchant actual receipt - Withdrawn merchant funds - Merchant funds used for refunds`
-
+- Increases balance: Settlement, allocation in
+- Decreases balance: Payout, refund, allocation out
 
 This balance can be queried through the **Balance** module of Payments App or by calling [List merchant balances](/payments/en/api-references/payment/list-merchant-balances).
 
+### Developer account balance
 
-### Developer balance
+**Developer account balance** refers to the total amount of funds in the developer account that can be used for payouts or refunds at a specific moment.
 
-**Developer balance** refers to the total amount of funds that the developer can withdraw or refund at a specific moment. Calculation formula:
-
-
-`Developer balance = Total developer fees - Withdrawn developer funds - Developer funds used for refunds`
-
-<Info>In addition to developer fees in various pay-in types, the total developer fees also include funds transferred from external wallets.</Info>
+- Increases balance: Settlement, allocation in, developer fee collected from refunds
+- Decreases balance: Payout, refund, allocation out
 
 This balance can be queried through the **Balance** module of Payments App or by calling [Get developer balance](/payments/en/api-references/payment/get-developer-balance).
 
 <Tip>Feel free to [share your feedback](https://forms.zohopublic.com/cobo/form/DocumentFeedbackForm/formperma/QvLOhxJv1_JMsJ-1dleZ8Itb_7rzN-LtgvsDdxosoVI) to improve our documentation!</Tip>
-
