allocation, payout, and payment link release

--- a/payments/cn/guides/amounts-and-balances.mdx
+++ b/payments/cn/guides/amounts-and-balances.mdx
@@ -7,12 +7,16 @@ lang: "zh-hans"
 
 ## 账户
 
-账户分为两种类型：
+账户是在系统账本中管理的虚拟资金主体，与链上钱包或链上地址没有一一对应关系。
+- 每一笔收款、划转、退款或资金转出（Payout）等操作，都会在账本中形成明细条目，并据此动态更新各账户的余额。
+- 账户间的资金分配（如自动结算、手动划转）仅在账本内部发生，不会产生链上转账。只有在执行资金转出（Payout）或退款等操作时，才会触发链上实际资产的转移。
+
+目前支持以下账户：
 
 - **开发者账户**：持有开发者余额的单一账户。代表作为收款服务提供方（即您）所拥有的资金。
 - **商户账户**：每个商户对应一个账户，持有各自的商户余额。每个商户代表实际收款的业务主体。
 
-当您执行资金转出或退款等操作时，需要选择使用哪个账户作为资金来源。
+当您执行资金转出（Payout）或退款等操作时，需要选择使用哪个账户作为资金来源。
 
 ## 资金结算与划转
 
@@ -23,9 +27,7 @@ lang: "zh-hans"
 
 ### 自动结算
 
-收到付款后，资金会自动结算到商户账户和开发者账户。结算规则因收款模式而异。
-
-下图展示了支付过程中资金的整体自动结算和流向（示例数据）：
+当收到付款后，系统会根据预设规则将资金自动分配到相应的商户账户和开发者账户。下方示意图展示了这一结算流程。具体的结算规则可能会因收款模式不同而有所差异：
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
@@ -113,7 +115,7 @@ graph TD
 
 退款金额的来源可以是商户账户或开发者账户。
 
-- 当退款金额来源为商户账户时，您可以指定开发者费用金额。例如，当退款金额（`payable_amount`）为 100 USDT，开发者费用（`merchant_fee_amount`）为 1 USDT 时，100 USDT 的退款金额将结算 1 USDT 到开发者账户，付款方实际收到 99 USDT。
+- 当退款金额来源为商户账户时，您可以通过指定开发者费用对该笔退款收取一定的服务费用。例如，当退款金额（`payable_amount`）为 100 USDT，开发者费用（`merchant_fee_amount`）为 1 USDT 时，100 USDT 的退款金额将结算 1 USDT 到开发者账户，付款方实际收到 99 USDT。
 - 当退款金额来源为开发者账户时，开发者费用字段将被忽略，退款金额将全额从开发者账户中扣除并转给付款方。
 
 下图展示了退款过程中资金的结算和流向（示例数据）：
@@ -148,12 +150,23 @@ graph TD
 
 ## 余额
 
-每个账户都有余额，代表可用资金。下图展示了商户账户余额和开发者账户余额的主要来源和去向：
+账户余额指某一账户在特定时刻可用于资金转出（Payout）或退款的资金总额。该余额可以通过 Payments App 的**余额**模块或调用 [List merchant balances](/payments/en/api-references/payment/list-merchant-balances) 以及 [Get developer balance](/payments/en/api-references/payment/get-developer-balance) 进行查询。
 
-<Info>
-- 下图未展示划转操作的资金流向
-- 审查中/隔离/冻结金额将不被计入账户余额
-</Info>
+
+账户余额的变动主要来源于以下活动：
+
+**会增加余额的情况：**
+- 收款时自动结算
+- 手动划转资金转入
+- 退款时自动结算（仅适用于开发者账户）
+
+**会减少余额的情况：**
+- 资金转出（Payout）
+- 发生退款
+- 手动划转资金转出
+
+下图展示了商户账户余额和开发者账户余额的主要来源和去向（未包含划转操作）：
+
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
@@ -164,10 +177,10 @@ graph TD
     A --> F[商户账户余额]
     A --> G[开发者账户余额]
     
-    F --> H[资金转出]
+    F --> H[资金转出（Payout）]
     F --> I[退款]
     
-    G --> J[资金转出]
+    G --> J[资金转出（Payout）]
     G --> K[退款]
     
     M[退款时收取的开发者费用] --> G
@@ -183,22 +196,8 @@ graph TD
     style L fill:#ffebee
 ```
 
-### 商户账户余额
 
-**商户账户余额**指某一商户账户在特定时刻可用于资金转出或退款的资金总额。
 
-- 增加余额：结算、划转转入
-- 减少余额：资金转出、退款、划转转出
 
-该余额可以通过 Payments App 的**余额**模块或调用 [List merchant balances](/payments/en/api-references/payment/list-merchant-balances) 进行查询。
-
-### 开发者账户余额
-
-**开发者账户余额**指开发者账户在特定时刻可用于资金转出或退款的资金总额。
-
-- 增加余额：结算、划转转入、退款时收取的开发者费用
-- 减少余额：资金转出、退款、划转转出
-
-该余额可以通过 Payments App 的**余额**模块或调用 [Get developer balance](/payments/en/api-references/payment/get-developer-balance) 进行查询。
 
 <Tip>欢迎您[提交反馈](https://forms.zohopublic.com/cobo/form/DocumentFeedbackForm/formperma/QvLOhxJv1_JMsJ-1dleZ8Itb_7rzN-LtgvsDdxosoVI)来帮助改进我们的文档！</Tip>
