--- a/payments/cn/guides/third-party-wallet-support.mdx
+++ b/payments/cn/guides/third-party-wallet-support.mdx
@@ -36,6 +36,7 @@ lang: "zh-hans"
 | OKX Wallet | ✅ | ✅ | ✅ |
 | Bitget Wallet | ✅ | ✅ | ✅ |
 | Trust | ✅ | ✅ | ✅ |
+| Binance | ✅ | ✅ | ❌ |
 | TokenPocket | ✅ | ✅ | ✅ |
 | Phantom | ✅ | ✅ | ❌ |
 | Solflare | ❌ | ✅ | ❌ |
