--- a/payments/en/guides/amounts-and-balances.mdx
+++ b/payments/en/guides/amounts-and-balances.mdx
@@ -1,42 +1,35 @@
 ---
-title: "Accounts, settlement and allocation, and balances"
+title: "Accounts and fund allocation"
 lang: "en"
 ---
 
 <Note>**Disclaimer: This article contains AI translations and should only be used as reference.** Contact Cobo's support team through [help@cobo.com](mailto:help@cobo.com) if you have any questions.</Note>
 
-This topic explains how funds are organized into accounts, how funds are distributed between accounts through settlement and allocation, and how balances are calculated.
+This article introduces the various types of accounts involved in fund management, and how funds are efficiently allocated and managed between accounts through **settlement** and **allocation** after payment collection.
 
 ## Accounts
 
-Cobo uses accounts to organize and track funds. There are two types of accounts:
+An account is a virtual fund entity managed in the system ledger, without a one-to-one correspondence to on-chain wallets or addresses.
+- Each operation such as payment collection, settlement, fees, refunds, or payouts creates detailed entries in the ledger, which dynamically update the balance of each account.
+- Fund allocation between accounts (such as automatic settlement or manual allocation) only flows within the ledger and does not directly result in on-chain transfers. Only when performing payouts or refunds will actual on-chain asset transfers be triggered.
 
-- **Developer account**: A single account that holds your developer balance. This represents funds belonging to you as the entity providing payment collection services.
-- **Merchant accounts**: One account per merchant that holds the respective merchant balance. Each merchant represents an actual business entity receiving payments.
+The following accounts are currently supported:
+
+- **Developer account**: A single account that holds the developer balance. This represents funds belonging to you as the payment collection service provider.
+- **Merchant accounts**: Each merchant corresponds to an account that holds its respective merchant balance. Each merchant represents an actual business entity receiving payments.
 
 When you perform operations such as payouts or refunds, you need to select which account to use as the source of funds.
 
-By creating merchants and setting developer fees/rates, you can achieve automated fund settlement and revenue sharing:
-
-- If you serve payers directly:
-  - Usually, you only need to create one merchant (use the merchant created by default by the system), and there is no need to configure a developer fee rate.
-  - If you want to manage funds separately for different business lines, you can create a merchant for each business line.
-- If you are a platform institution serving multiple downstream merchants, you can create a merchant in the system for each downstream merchant and achieve automated merchant settlement and platform revenue allocation by setting developer fees/rates.
-
-For more information on usage scenarios and descriptions of merchant management, refer to [Merchant management](/payments/en/guides/merchants).
-
-## Settlement and allocation
+## Fund settlement and allocation
 
 Funds can be distributed between accounts in two ways:
 
-- **Automatic settlement**: During the pay-in process, funds are automatically settled to the merchant account and developer account based on predefined rules.
-- **Manual allocation**: You can manually allocate funds between accounts using the Allocate feature in the Payments App.
+- **Automatic settlement**: During the payment collection process, funds are automatically settled to merchant accounts and the developer account based on predefined rules.
+- **Manual allocation**: You can use the Allocate feature to manually transfer funds between accounts.
 
 ### Automatic settlement
 
-When a payment is received, funds are automatically settled to the merchant account and developer account. The settlement rules differ depending on the pay-in type.
-
-The following diagram shows the overall automatic settlement and flow of funds during the payment process (sample data):
+When a payment is received, the system automatically distributes funds to the corresponding merchant account and developer account based on predefined rules. The diagram below illustrates this settlement process. The specific settlement rules may vary depending on the payment collection mode:
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
@@ -46,12 +39,17 @@ graph TD
     E[Payer C<br/>100 USDT] --> F[Merchant C<br/>Rate: 1%]
     
     B --> G[Merchant A Account<br/>98 USDT]
-    D --> I[Merchant B Account<br/>98.5 USDT]
-    F --> K[Merchant C Account<br/>99 USDT]
+    B --> H[Developer Fee<br/>2 USDT]
     
-    B -->|2 USDT| M[Developer Account<br/>4.5 USDT]
-    D -->|1.5 USDT| M
-    F -->|1 USDT| M
+    D --> I[Merchant B Account<br/>98.5 USDT]
+    D --> J[Developer Fee<br/>1.5 USDT]
+    
+    F --> K[Merchant C Account<br/>99 USDT]
+    F --> L[Developer Fee<br/>1 USDT]
+    
+    H --> M[Developer Account<br/>4.5 USDT]
+    J --> M
+    L --> M
     
     style A fill:#e3f2fd
     style C fill:#e3f2fd
@@ -62,12 +60,15 @@ graph TD
     style G fill:#c8e6c9
     style I fill:#c8e6c9
     style K fill:#c8e6c9
+    style H fill:#fff3e0
+    style J fill:#fff3e0
+    style L fill:#fff3e0
     style M fill:#fff3e0
 ```
 
 #### Top-up mode
 
-In top-up mode, fund settlement is based on the developer fee rate (`developer_fee_rate`) set when creating the merchant. The developer fee rate determines the proportion settled to the developer account in each top-up.
+In top-up mode, fund settlement is based on the developer fee rate (`developer_fee_rate`) set when creating the merchant. The developer fee rate determines the proportion of each top-up that is settled to the developer account.
 
 **Example**: When the developer fee rate is 1%, a 100 USDT top-up will be settled as 99 USDT to the merchant account and 1 USDT to the developer account.
 
@@ -87,9 +88,9 @@ graph TD
 
 #### Order mode
 
-In order mode, fund settlement is based on the amount parameters set when creating the order. The ratio between the developer fee (`fee_amount`) and the product order amount (`order_amount`) determines the proportion settled to the developer account in each order.
+In order mode, fund settlement is based on the amount parameters set when creating the order. The ratio between the developer fee (`fee_amount`) and the product order amount (`order_amount`) determines the proportion of each order that is settled to the developer account.
 
-**Example**: When the product order amount is 99 USDT and the developer fee is 1 USDT, the actual received amount of 100 USDT from the order will be settled as 99 USDT to the merchant account and 1 USDT to the developer account:
+**Example**: When the product order amount is 99 USDT and the developer fee is 1 USDT, the actual received amount of 100 USDT will be settled as 99 USDT to the merchant account and 1 USDT to the developer account:
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
@@ -108,7 +109,7 @@ graph TD
 <Note>
 Special case handling:
 
-- Overpayment/Underpayment: Settle funds according to the same ratio as above
+- Overpayment/Underpayment: Funds are settled according to the same ratio as above
 - Late payment: All funds are settled to the developer account
 </Note>
 
@@ -116,10 +117,10 @@ Special case handling:
 
 The source of the refund amount can be either the merchant account or the developer account.
 
-- When the refund amount comes from the merchant account, you can specify the developer fee amount. For example, when the refund amount (`payable_amount`) is 100 USDT and the developer fee (`merchant_fee_amount`) is 1 USDT, 1 USDT from the 100 USDT refund amount will be allocated to the developer account, and the payer will actually receive 99 USDT.
+- When the refund amount comes from the merchant account, you can specify a developer fee to charge a service fee for the refund. For example, when the refund amount (`payable_amount`) is 100 USDT and the developer fee (`merchant_fee_amount`) is 1 USDT, 1 USDT from the 100 USDT refund will be settled to the developer account, and the payer will actually receive 99 USDT.
 - When the refund amount comes from the developer account, the developer fee field will be ignored, and the full refund amount will be deducted from the developer account and transferred to the payer.
 
-The following diagram shows the allocation and flow of funds during the refund process (sample data):
+The following diagram shows the settlement and flow of funds during the refund process (sample data):
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
@@ -147,18 +148,32 @@ graph TD
 
 ### Manual allocation
 
-In addition to automatic settlement during pay-in, you can manually allocate funds between accounts using the Allocate feature in the Payments App. For more information, see [Allocate funds](/payments/en/guides/allocate-funds).
+In addition to automatic settlement during payment collection, you can also use the Allocate feature to manually transfer funds between accounts. For details, see [Allocate funds](/payments/en/guides/allocate-funds).
 
 ## Balances
 
-Each account has a balance that represents the available funds. The following diagram shows the main sources and uses of merchant account balances and developer account balances:
+Account balance refers to the total amount of funds in an account that can be used for payouts or refunds at a specific moment. This balance can be queried through the **Balance** module in the Payments App or by calling [List merchant balances](/payments/en/api-references/payment/list-merchant-balances) and [Get developer balance](/payments/en/api-references/payment/get-developer-balance).
 
-<Info>Under review/isolated/frozen amounts will not be counted towards account balances.</Info>
+
+Balance changes mainly come from the following activities:
+
+**Situations that increase balance:**
+- Automatic settlement during payment collection
+- Manual allocation transfer in
+- Automatic settlement during refunds (only applicable to the developer account)
+
+**Situations that decrease balance:**
+- Payout
+- Refund
+- Manual allocation transfer out
+
+The following diagram shows the main sources and destinations of merchant account balances and developer account balances (allocation operations not included):
+
 
 ```mermaid
 %%{init: {'themeVariables': { 'fontSize': '12px'}}}%%
 graph TD
-    A[Payment]
+    A[Payment collection]
     
     A --> L[Under review, isolated<br>or frozen amount]
     A --> F[Merchant account balance]
@@ -171,7 +186,6 @@ graph TD
     G --> K[Refund]
     
     M[Developer fee collected from refunds] --> G
-    P[Transfer from external wallet] --> G
     
     style A fill:#e1f5fe
     style F fill:#c8e6c9
@@ -182,25 +196,9 @@ graph TD
     style K fill:#fff3e0
     style M fill:#e1f5fe
     style L fill:#ffebee
-    style P fill:#e1f5fe
 ```
 
-### Merchant account balance
 
-**Merchant account balance** refers to the total amount of funds in a merchant account that can be used for payouts or refunds at a specific moment.
 
-- Increases balance: Settlement, allocation in
-- Decreases balance: Payout, refund, allocation out
-
-This balance can be queried through the **Balance** module of Payments App or by calling [List merchant balances](/payments/en/api-references/payment/list-merchant-balances).
-
-### Developer account balance
-
-**Developer account balance** refers to the total amount of funds in the developer account that can be used for payouts or refunds at a specific moment.
-
-- Increases balance: Settlement, allocation in, developer fee collected from refunds
-- Decreases balance: Payout, refund, allocation out
-
-This balance can be queried through the **Balance** module of Payments App or by calling [Get developer balance](/payments/en/api-references/payment/get-developer-balance).
 
 <Tip>Feel free to [share your feedback](https://forms.zohopublic.com/cobo/form/DocumentFeedbackForm/formperma/QvLOhxJv1_JMsJ-1dleZ8Itb_7rzN-LtgvsDdxosoVI) to improve our documentation!</Tip>
