--- a/payments/en/guides/third-party-wallet-support.mdx
+++ b/payments/en/guides/third-party-wallet-support.mdx
@@ -36,6 +36,7 @@ Users can connect a third-party wallet app installed on their device after openi
 | OKX Wallet | ✅ | ✅ | ✅ |
 | Bitget Wallet | ✅ | ✅ | ✅ |
 | Trust | ✅ | ✅ | ✅ |
+| Binance | ✅ | ✅ | ❌ |
 | TokenPocket | ✅ | ✅ | ✅ |
 | Phantom | ✅ | ✅ | ❌ |
 | Solflare | ❌ | ✅ | ❌ |
