--- a/payments/cn/guides/allocate-funds.mdx
+++ b/payments/cn/guides/allocate-funds.mdx
@@ -3,20 +3,25 @@ title: "划转资金"
 lang: "zh-hans"
 ---
 
-您可以使用 Payments App 中的划转功能在账户之间手动划转资金。支持以下操作：
+您可以通过划转功能，在两个不同账户之间手动转移资金，实现各类业务场景：
 
-- 从开发者账户划转资金到商户账户
-- 从商户账户划转资金到开发者账户
-- 在两个商户账户之间划转资金
+- **订单模式下出现晚付**：资金会自动结算到开发者账户。若实际应归属商户，您可以通过划转将相应资金转回商户账户。  
+- **某笔交易需多商户分账**：自动结算后，可手动划转资金，在商户账户间灵活分配收益。
+- **开发者费用录入有误或收取不足**：可手动将商户账户余额划拨至开发者账户，补收开发者费用。
+
+<Note>
+- 划转操作目前仅限于同一钱包内的账户之间，本质是对两个账户余额的内部调整，不涉及实际链上转账。因此，当来源账户与目标账户分别位于不同钱包时，您可能无法完成划转，或者可划转金额会受限。
+- 如果出现无法划转或可划转金额不足的情况，建议使用资金转出（Payout）功能，将资金直接转至目标商户的外部地址。
+</Note>
 
 ## 操作步骤
 
 1. 在 Payments App 中点击**资金管理** > **余额**，进入**余额**页面。
 2. 点击**商户余额**或**开发者余额**标签页，并定位到对应的账户余额卡片。
 3. 点击余额卡片上的**划转**按钮。
-<img src="/payments/cn/images/payments/allocate.png" className="screenshot_full_screen" alt="在账户之间划转资金"/>
-3. 填写划转表单：
-   - **来源账户**：选择来源账户（开发者账户或某个商户账户）。
+   <img src="/payments/cn/images/payments/allocate.png" className="screenshot_full_screen" alt="在账户之间划转资金"/>
+4. 填写划转表单：
+   - **来源账户**：选择来源账户。
    - **目标账户**：选择目标账户。
    - **代币**：选择要划转的代币。每次只能划转一种代币。
    - **金额**：输入要划转的金额。
