--- a/payments/cn/guides/checkout-sdk.mdx
+++ b/payments/cn/guides/checkout-sdk.mdx
@@ -4,7 +4,7 @@ lang: "zh-hans"
 description: ""
 ---
 
-<Warning>Checkout SDK 已进入停用维护期。我们推荐使用更简洁、易用的[付款链接](/payments/cn/guides/payment-link) 方案。现有用户可继续使用 Checkout SDK，但建议尽快迁移至付款链接方案。</Warning>
+<Warning>Checkout SDK 已进入停用维护期。我们推荐使用更简洁、易用的[支付链接](/payments/cn/guides/payment-link) 方案。现有用户可继续使用 Checkout SDK，但建议尽快迁移至支付链接方案。</Warning>
 
 
 Cobo 的 Checkout SDK 提供开箱即用的支付前端组件。通过简单的 iFrame 集成，您可以快速开发一个安全可靠的加密货币支付页面，无需直接调用 Payments API 或处理繁琐的 UI 设计和支付逻辑，从而显著降低开发成本和时间投入。
