--- a/payments/cn/guides/fiat-payouts.mdx
+++ b/payments/cn/guides/fiat-payouts.mdx
@@ -24,12 +24,10 @@ lang: "zh-hans"
 1. 登录 Cobo Portal [开发环境](https://portal.dev.cobo.com/login)或[生产环境](https://portal.cobo.com/login)。
 2. 在左侧导航栏中点击 **Apps**，然后点击 **Payments** 卡片，启动 App。
 3. 在 App 的左侧导航栏中点击**资金管理** > **资金转出**。
-4. 您可以选择提取**商户余额**或**开发者余额**。在本例中，我们选择提取商户余额。点击**商户余额**卡片上的**结算**按钮。
-5. 在弹窗中，选择**法币出金**。收款模式可以选择**订单**或**充值**，分别对应订单模式和充值模式收取的款项余额。在本例中，我们选择订单模式。
-  <img src="/payments/cn/images/payments/fiat-payout.png" className="screenshot_full_screen" alt="法币出金入口" />
-6. 填写出金信息：
-   - 选择您想要出金的订单。系统会自动计算此次出金的加密货币总额。
-   - 选择接收法币的银行账户。如需添加新的银行账户，请参考[转出目的地](/payments/cn/guides/destinations)。
+4. 您可以选择提取**商户余额**或**开发者余额**。在本例中，我们选择提取商户余额。点击**商户余额**卡片上的**转出**按钮。
+5. 在弹窗中，选择**法币出金**。
+   <img src="/payments/cn/images/payments/fiat-payout.png" className="screenshot_full_screen" alt="法币出金入口" />
+6. 填写出金信息，包括代币、商户名称、转出金额、以及接收银行账户。如需添加新的银行账户，请参考[转出目的地](/payments/cn/guides/destinations)。
 <Note>
 在法币出金页面，您可以查看本次出金涉及的各项费用明细和预计到账金额：
 
@@ -92,7 +90,7 @@ lang: "zh-hans"
 1. 登录 Cobo Portal [开发环境](https://portal.dev.cobo.com/login)或[生产环境](https://portal.cobo.com/login)。
 2. 在左侧导航栏中点击 **Apps**，然后点击 **Payments** 卡片，启动 App。
 3. 在 App 的左侧导航栏中点击**资金管理** > **资金转出**。
-4. 在**结算历史**标签页查看所有出金请求的状态和详情。
+4. 在**资金转出历史**标签页查看所有出金请求的状态和详情。
   </Tab>
 
   <Tab title="Payments API" icon="code">
