--- a/payments/en/guides/changelog.mdx
+++ b/payments/en/guides/changelog.mdx
@@ -1,87 +1,107 @@
 ---
-title: "Release history"
+title: "Release History"
 lang: "en"
 ---
 
-<Note>**Disclaimer: This article contains AI translations and should only be used as reference.** Contact Cobo's support team through [help@cobo.com](mailto:help@cobo.com) if you have any questions.</Note>
+This document records all major updates and upcoming features for the Cobo Payments solution, helping you stay informed about product developments and upgrades.
 
-This document records all major updates to the Cobo payments solution.
+
+## Coming Soon
+
+<Note>The following features are coming soon. Stay tuned!</Note>
+
+| Feature | Preview |
+|---------|---------|
+| **Funds Management** | - New bulk payout feature for transferring cryptocurrency to multiple addresses at once.<br/>- New Allocation API operations for flexible fund distribution between accounts.<br/>- New Payout API operations with streamlined process—no need to specify fund source (pay-in/top-up mode) or orders, just enter the amount. |
+| **Pay-in** | - Simplified fields for [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order) and [Create order link](/payments/en/api-references/payment/create-order-link): support for custom payable amounts, removal of exchange_rate field, and optimized field naming for better readability.<br/>- Global precision for amount fields unified to 2 decimal places for easier reconciliation and fund management. |
+| **Payment Link** | When creating an order payment link via [Create order link](/payments/en/api-references/payment/create-order-link), you can now configure the merchant's original shopping page URL. Users can be redirected back to the shopping page upon successful payment or errors, improving the payment experience. |
 
 ## December 2025
 
-| Product | Change description | Release date |
-|------|----------|----------|
-| **Payments App** |  - Added [Counterparties](/payments/en/guides/counterparties) feature for managing payer information<br/>- Added [Destinations](/payments/en/guides/destinations) feature for centralized management of payout destination information. | 2025-12-03 |
+| Feature | Change Description | Release Date |
+|---------|-------------------|--------------|
+| **Funds Management** | - Added [Allocation](/payments/en/guides/allocate-funds) feature for manual fund distribution between accounts. Currently available via Payments App, API coming soon.<br/>- Introduced [Account](/payments/en/guides/amounts-and-balances#accounts) concept. Accounts are virtual fund entities managed in the system ledger. See [Accounts and Fund Allocation](/payments/en/guides/amounts-and-balances) for details.<br/>- Simplified payout process. No need to specify fund source (pay-in or top-up mode) or orders—just enter the amount. Currently available via Payments App, API coming soon. See [Fiat Payouts](/payments/en/guides/fiat-payouts) and [Crypto Payouts](/payments/en/guides/crypto-payouts). | 2025-12-12 |
+| **Payment Link** | [Order payment link](/payments/en/guides/payment-link) redesigned:<br/>- Brand new visual and interaction design<br/>- Desktop support for Binance Wallet (EVM and Solana chains)<br/>- Support for scanning QR codes with embedded amounts, auto-filling transfer amounts<br/>- Third-party wallet optimization: simplified flow, recommends previously used wallet | 2025-12-12 |
+| **Counterparties** | Added [Counterparties](/payments/en/guides/counterparties) feature for managing payer information. Currently available via Payments App, API coming soon. | 2025-12-03 |
+| **Destinations** | Added [Destinations](/payments/en/guides/destinations) feature for centralized management of payout destination information. Currently available via Payments App, API coming soon. | 2025-12-03 |
 
 ## November 2025
 
-| Product | Change description | Release date |
-|------|----------|----------|
-| **Payments API** | API SDK v1.27.0 released.<br/><br/>- **Breaking changes**<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- Get payer balance operation has been removed.<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Get Access Token](/v2/api-references/oauth/get-access-token) and [Refresh Access Token](/v2/api-references/oauth/refresh-access-token) operations have been deprecated.<br/><br/>- **New features**<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- Added [Batch get exchange rates](/payments/en/api-references/payment/batch-get-exchange-rates) operation for batching exchange rate retrieval. | 2025-11-26 |
-| **Payments API** | API SDK v1.26.0 released.<br/><br/>- Added [Create refund link](/payments/en/api-references/payment/create-refund-link) operation for generating refund links.<br/>- `RefundStatus` schema now includes `AddressPending` and `AddressSubmitted` statuses. | 2025-11-12 |
+| Feature | Change Description | Release Date |
+|---------|-------------------|--------------|
+| **Funds Management** | (SDK v1.27.0) Get payer balance operation has been removed. | 2025-11-26 |
+| **Exchange Rates** | (SDK v1.27.0) Added [Batch get exchange rates](/payments/en/api-references/payment/batch-get-exchange-rates) operation for batch exchange rate retrieval. | 2025-11-26 |
+| **SDK & API** | (SDK v1.27.0) [Get Access Token](/v2/api-references/oauth/get-access-token) and [Refresh Access Token](/v2/api-references/oauth/refresh-access-token) operations have been deprecated. | 2025-11-26 |
+| **Refunds** | (SDK v1.26.0) Added [Create refund link](/payments/en/api-references/payment/create-refund-link) operation for creating refund links. `RefundStatus` schema now includes `AddressPending` and `AddressSubmitted` statuses. | 2025-11-12 |
 
 ## October 2025
 
-| Product | Change description | Release date |
-|------|----------|----------|
-| **Payments API** | API SDK v1.25.0 released.<br/><br/>- **Breaking changes**<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- In the [Create settlement request](/payments/en/api-references/payment/create-settlement-request) endpoint, the previously deprecated `settlements.currency` and `settlements.bank_account_id` fields have now been removed. Please use the top-level `currency` and `bank_account_id` fields to specify the fiat currency and bank account.<br/><br/>- **New features**<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- Added [Create order link](/payments/en/api-references/payment/create-order-link) operation for generating a payment link for a pay-in order.<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Added the `payment.transaction.failed` event, which is triggered when a deposit transaction fails the compliance screening.<br/>&nbsp;&nbsp;&nbsp;&nbsp;- The [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order) request body now includes an `amount_tolerance` field to specify the acceptable deviation for underpayments. | 2025-10-30 |
-| **Payments App** | Added auto-create wallet feature, simplifying merchant configuration process and improving integration efficiency. For details, see [Create merchant](/payments/en/guides/preparation#create-merchant). Related API operations: [Create merchant](/payments/en/api-references/payment/create-merchant), [List all merchants](/payments/en/api-references/payment/list-all-merchants). | 2025-10-21 |
-| **Payments API** | API SDK v1.24.0 released. Changes as follows:<br/><br/>- **Breaking changes**<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- In the [Create settlement request](/payments/en/api-references/payment/create-settlement-request) operation, the `settlements.currency` and `settlements.bank_account_id` fields are deprecated. Please use the top-level `currency` and `bank_account_id` fields to specify the fiat currency and bank account.<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- **Java SDK breaking change**: When calling the following operations with Java SDK, the `merchantId` field must be repositioned after required parameters to avoid compilation errors, as it has become optional in this version:<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- [Create/Get top-up address](/payments/en/api-references/payment/createget-top-up-address)<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- [Update top-up address](/payments/en/api-references/payment/update-top-up-address)<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- [List payers](/payments/en/api-references/payment/list-payers)<br/><br/><br/>- **New features**<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Create merchant](/payments/en/api-references/payment/create-merchant) and [List all merchants](/payments/en/api-references/payment/list-all-merchants) operations added `wallet_setup` field to specify merchant wallet configuration. The `wallet_id` field is now deprecated.<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Estimate fees](/payments/en/api-references/payment/estimate-fees) operation: Used to calculate fees for various operations<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order) operation added `custom_exchange_rate` field: Supports custom exchange rates<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Create settlement request](/payments/en/api-references/payment/create-settlement-request) request body added fields:<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- `currency`: Specifies the fiat payout currency<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- `bank_account_id`: Specifies the receiving bank account<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- `remark`: Adds notes for fiat payouts<br/><br/>- **Field changes**<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- The `merchant_id` field is now optional in the following operations:<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- [Create/Get top-up address](/payments/en/api-references/payment/createget-top-up-address)<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- [Update top-up address](/payments/en/api-references/payment/update-top-up-address)<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- [List payers](/payments/en/api-references/payment/list-payers)<br/>&nbsp;&nbsp;&nbsp;&nbsp;- `SettleRequestStatus` schema added `Canceled` status: Indicates bank transfer failure<br/>&nbsp;&nbsp;&nbsp;&nbsp;- `Settlement` schema added `currency`, `received_amount_fiat`, and `bank_account` fields: Used to describe the fiat payout currency, estimated received amount, and bank account information | 2025-10-15 |
-| **Payments API** |To simplify the settlement process and improve user experience, we have optimized Payments API by removing concepts and related operations such as withdrawable balance and forced sweep:<br/><br/>**Deprecated operations:**<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- Withdrawable balance query: [Get withdrawable balances](/payments/en/api-references/payment/get-withdrawable-balances)<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Payment wallet balance query: [List payment wallet balances](/payments/en/api-references/payment/list-payment-wallet-balances)<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Forced sweep operation: [Create forced sweep](/payments/en/api-references/payment/create-forced-sweep), [List forced sweeps](/payments/en/api-references/payment/list-forced-sweeps)<br/><br/>**Deprecated fields:**<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- `available_balance` field in [List merchant balances](/payments/en/api-references/payment/list-merchant-balances) and [Get developer balance](/payments/en/api-references/payment/get-developer-balance)<br/>&nbsp;&nbsp;&nbsp;&nbsp;- `use_dedicated_address` field in [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order)<br/><br/><Warning>The above operations and fields are retained only for compatibility with older versions and should not be used in new implementations.</Warning> | 2025-10-01 |
-
-
+| Feature | Change Description | Release Date |
+|---------|-------------------|--------------|
+| **Funds Management** | (SDK v1.25.0) In [Create settlement request](/payments/en/api-references/payment/create-settlement-request), the previously deprecated `settlements.currency` and `settlements.bank_account_id` fields have been removed. Use the top-level `currency` and `bank_account_id` fields to specify fiat currency and bank account. | 2025-10-30 |
+| **Payment Link** | (SDK v1.25.0) Added [Create order link](/payments/en/api-references/payment/create-order-link) operation for creating payment links for pay-in orders. | 2025-10-30 |
+| **Pay-in** | (SDK v1.25.0) - Added `payment.transaction.failed` event, triggered when a deposit transaction fails compliance screening.<br/>- [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order) request body now includes `amount_tolerance` field to specify acceptable underpayment deviation. | 2025-10-30 |
+| **Merchant Management** | Added auto-create wallet feature, simplifying merchant configuration and improving onboarding efficiency. See [Create Merchant](/payments/en/guides/preparation#create-merchant). Related API operations: [Create merchant](/payments/en/api-references/payment/create-merchant), [List all merchants](/payments/en/api-references/payment/list-all-merchants). | 2025-10-21 |
+| **Merchant Management** | (SDK v1.24.0) [Create merchant](/payments/en/api-references/payment/create-merchant) and [List all merchants](/payments/en/api-references/payment/list-all-merchants) operations added `wallet_setup` field for merchant wallet configuration. The `wallet_id` field is now deprecated. | 2025-10-15 |
+| **Funds Management** | (SDK v1.24.0) - [Estimate fees](/payments/en/api-references/payment/estimate-fees) operation: for estimating fees for various operations.<br/>- [Create settlement request](/payments/en/api-references/payment/create-settlement-request) request body added `currency`, `bank_account_id`, `remark` fields.<br/>- `SettleRequestStatus` schema added `Canceled` status: indicates bank transfer failure.<br/>- `Settlement` schema added `currency`, `received_amount_fiat`, and `bank_account` fields. | 2025-10-15 |
+| **Pay-in** | (SDK v1.24.0) - [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order) added `custom_exchange_rate` field: supports custom exchange rates.<br/>- `merchant_id` field is now optional in [Create/Get top-up address](/payments/en/api-references/payment/createget-top-up-address), [Update top-up address](/payments/en/api-references/payment/update-top-up-address), [List payers](/payments/en/api-references/payment/list-payers) operations. | 2025-10-15 |
+| **Funds Management** | To simplify the settlement process and improve user experience, Payments API has been optimized by removing withdrawable balance, forced sweep, and related concepts:<br/><br/>**Deprecated operations:**<br/>- Withdrawable balance query: [Get withdrawable balances](/payments/en/api-references/payment/get-withdrawable-balances)<br/>- Payment wallet balance query: [List payment wallet balances](/payments/en/api-references/payment/list-payment-wallet-balances)<br/>- Forced sweep operations: [Create forced sweep](/payments/en/api-references/payment/create-forced-sweep), [List forced sweeps](/payments/en/api-references/payment/list-forced-sweeps)<br/><br/>**Deprecated fields:**<br/>- `available_balance` field in [List merchant balances](/payments/en/api-references/payment/list-merchant-balances) and [Get developer balance](/payments/en/api-references/payment/get-developer-balance)<br/>- `use_dedicated_address` field in [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order)<br/><br/><Warning>The above operations and fields are retained only for backward compatibility and should not be used in new implementations.</Warning> | 2025-10-01 |
 
 ## September 2025
 
-| Product | Change description | Release date |
-|------|----------|----------|
-| **Payments solution** | Added support for Solana chain. | 2025-09-26 |
-| **Payments API** |Order mode now supports [payment.transaction.completed](/payments/en/guides/status-and-events) event.| 2025-09-05 |
-
+| Feature | Change Description | Release Date |
+|---------|-------------------|--------------|
+| **Supported Chains** | Added support for Solana chain. | 2025-09-26 |
+| **Pay-in** | Order mode now supports [payment.transaction.completed](/payments/en/guides/status-and-events) event. | 2025-09-05 |
 
 ## August 2025
 
-| Product | Change description | Release date |
-|------|----------|----------|
-| **Payments API** |API SDK v1.22.0 released. Changes as follows:<br/><br/>- **Breaking change**<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;-The ​`settlements.token_id` field in the [Create settlement request](/payments/en/api-references/payment/create-settlement-request) request body is changed from optional to required. At the same time, the ​`settlements.amount` field only represents the cryptocurrency amount to be settled and no longer represents the fiat currency amount.<br/><br/>- Added balance-related operations:<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- [List merchant balances](/payments/en/api-references/payment/list-merchant-balances)<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Get developer balance](/payments/en/api-references/payment/get-developer-balance)<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [List payment wallet balances](/payments/en/api-references/payment/list-payment-wallet-balances)<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Get payer balance](/payments/en/api-references/payment/get-payer-balance)| 2025-08-28 |
-| **Payments API** |API SDK v1.21.0 released. Changes as follows:<br/><br/>- Added settlement-related operations:<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- [List all settlement details](/payments/en/api-references/payment/list-all-settlement-details): Used to query settlement details.<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Create crypto address](/payments/en/api-references/payment/create-crypto-address): Used to register crypto payout addresses<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Delete crypto address](/payments/en/api-references/payment/delete-crypto-address): Used to cancel registration of crypto payout addresses<br/><br/>- Added refund-related operations:<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Update refund order](/payments/en/api-references/payment/update-refund-order): Used to update the receiving address of refund orders.<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Cancel refund order](/payments/en/api-references/payment/cancel-refund-order): Used to cancel refund orders| 2025-08-13 |
-| **Checkout SDK** | - Added support for payment through third-party wallets, supporting mainstream wallets on EVM and Tron chains.<br/>- Added support for directly specifying order amount in cryptocurrency through the `cryptoAmount` parameter.| 2025-08-11 |
-
+| Feature | Change Description | Release Date |
+|---------|-------------------|--------------|
+| **Funds Management** | (SDK v1.22.0) - [Create settlement request](/payments/en/api-references/payment/create-settlement-request) request body: `settlements.token_id` field changed from optional to required. Additionally, `settlements.amount` field now only represents cryptocurrency amount, no longer fiat amount.<br/>- Added balance operations: [List merchant balances](/payments/en/api-references/payment/list-merchant-balances), [Get developer balance](/payments/en/api-references/payment/get-developer-balance), [List payment wallet balances](/payments/en/api-references/payment/list-payment-wallet-balances), [Get payer balance](/payments/en/api-references/payment/get-payer-balance) | 2025-08-28 |
+| **Funds Management** | (SDK v1.21.0) Added settlement operations: [List all settlement details](/payments/en/api-references/payment/list-all-settlement-details), [Create crypto address](/payments/en/api-references/payment/create-crypto-address), [Delete crypto address](/payments/en/api-references/payment/delete-crypto-address). | 2025-08-13 |
+| **Refunds** | (SDK v1.21.0) Added refund operations: [Update refund order](/payments/en/api-references/payment/update-refund-order), [Cancel refund order](/payments/en/api-references/payment/cancel-refund-order). | 2025-08-13 |
+| **Payment Link** | - Added support for third-party wallet payments, supporting mainstream wallets on EVM and Tron chains.<br/>- Added support for specifying order amount in cryptocurrency via `cryptoAmount` parameter. | 2025-08-11 |
 
 ## July 2025
 
-| Product | Change description | Release date |
-|------|----------|----------|
-| **Checkout SDK** | Added support for customizing the "Powered by xxx" text at the bottom of the checkout page through the `developerName` parameter. | 2025-07-30 |
-| **Payments API** |API SDK v1.20.0 released. Changes as follows:<br/><br/>- [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order) new feature: Supports directly specifying order amount in cryptocurrency. When the `currency` parameter is empty, `order_amount` and `fee_amount` will be in the cryptocurrency specified by `token_id` instead of fiat currency.<br/><br/>- Added [Update top-up address](/payments/en/api-references/payment/update-top-up-address) operation to update top-up addresses.<br/><br/> - Added forced sweep-related operations:<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Create forced sweep](/payments/en/api-references/payment/create-forced-sweep)<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [List forced sweeps](/payments/en/api-references/payment/list-forced-sweeps)<br/><br/>- [Get withdrawable balances](/payments/en/api-references/payment/get-withdrawable-balances) added `available_balance` and `total_balance` fields, representing withdrawable balance and total balance respectively.<br/><br/>- Added `payment.address.updated` webhook event to notify top-up address updates. At the same time, order-related events have added multiple fields.| 2025-07-30 |
-| **Payments API** | - [Create settlement request](/payments/en/api-references/payment/create-settlement-request) new feature: When the `order_ids` parameter is empty, automatically settle all unsettled orders for the merchant. | 2025-07-24 |
-| **Payments App** | - Added support for top-up mode. You can now on the web interface:<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Create and manage top-up addresses<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Monitor top-up transaction status<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Export top-up records | 2025-07-10 |
-| **Payments API** | API SDK v1.18.0 released. Changes as follows:<br/><br/>- Added top-up mode-related operations:<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Create/Get top-up address](/payments/en/api-references/payment/createget-top-up-address)<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [List payers](/payments/en/api-references/payment/list-payers)<br/>&nbsp;&nbsp;For specific integration steps, refer to [Get top-up address](/payments/en/guides/get-topup-addresses)<br/><br/>- Added `use_dedicated_address` parameter to [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order), supporting specifying the use of a dedicated receiving address<br/><br/>- Added multiple [webhook events](/payments/en/guides/status-and-events) related to top-up mode | 2025-07-02 |
-
+| Feature | Change Description | Release Date |
+|---------|-------------------|--------------|
+| **Pay-in** | (SDK v1.20.0) - [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order) new feature: supports specifying order amount in cryptocurrency. When `currency` parameter is empty, `order_amount` and `fee_amount` will use the cryptocurrency specified by `token_id` instead of fiat.<br/>- Added [Update top-up address](/payments/en/api-references/payment/update-top-up-address) operation for updating top-up addresses.<br/>- Added `payment.address.updated` webhook event for top-up address update notifications. | 2025-07-30 |
+| **Funds Management** | (SDK v1.20.0) - Added forced sweep operations: [Create forced sweep](/payments/en/api-references/payment/create-forced-sweep), [List forced sweeps](/payments/en/api-references/payment/list-forced-sweeps).<br/>- [Get withdrawable balances](/payments/en/api-references/payment/get-withdrawable-balances) added `available_balance` and `total_balance` fields for withdrawable and total balance respectively. | 2025-07-30 |
+| **Payment Link** | Added support for customizing "Powered by xxx" text at checkout page bottom via `developerName` parameter. | 2025-07-30 |
+| **Funds Management** | [Create settlement request](/payments/en/api-references/payment/create-settlement-request) new feature: when `order_ids` parameter is empty, automatically settles all unsettled orders for the merchant. | 2025-07-24 |
+| **Pay-in** | Added support for top-up mode. You can now on the web interface: create and manage top-up addresses, monitor top-up transaction status, export top-up records. | 2025-07-10 |
+| **Pay-in** | (SDK v1.18.0) Added top-up mode operations: [Create/Get top-up address](/payments/en/api-references/payment/createget-top-up-address), [List payers](/payments/en/api-references/payment/list-payers). See [Get Top-up Addresses](/payments/en/guides/get-topup-addresses) for integration steps. Added multiple [webhook events](/payments/en/guides/status-and-events) related to top-up mode. | 2025-07-02 |
 
 ## June 2025
 
-| Product | Change description | Release date |
-|------|----------|----------|
-| **Payments App** | - Added dashboard, balance query, and report export features | 2025-06-27 |
-| **Payments App** | - Added support for Custodial Wallets | 2025-06-19 |
-| **Payments API** | API SDK v1.17.0 released. Changes as follows:<br/><br/>- Added support for crypto payout settlement method. Related operations:<br/>&nbsp;&nbsp;&nbsp;&nbsp;-[Create settlement request](/payments/en/api-references/payment/create-settlement-request)<br/>&nbsp;&nbsp;&nbsp;&nbsp;-[List crypto addresses](/payments/en/api-references/payment/list-crypto-addresses)<br/><br/>- [Create refund order](/payments/en/api-references/payment/create-refund-order) added developer fee-related fields. You can charge developer fees to merchants during refunds. For more information, refer to [Handle refund requests](/payments/en/guides/create-orders#handle-refund-requests).<br/><br/>- Added the following APIs for OAuth authentication of Checkout SDK:<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Get Access Token](/v2/api-references/oauth/get-access-token)<br/>&nbsp;&nbsp;&nbsp;&nbsp;- [Refresh Access Token](/v2/api-references/oauth/refresh-access-token)| 2025-06-18 |
-| **Payments App** | - Added support for crypto payout settlement method | 2025-06-10 |
-| **Checkout SDK** | - Checkout SDK v1.1.0 released. Checkout SDK provides out-of-the-box payment frontend components, supporting quick integration via iframe embedding | 2025-06-09 |
+| Feature | Change Description | Release Date |
+|---------|-------------------|--------------|
+| **Reports & Dashboard** | Added dashboard, balance query, and report export features. | 2025-06-27 |
+| **Merchant Management** | Added support for Custodial Wallets. | 2025-06-19 |
+| **Funds Management** | (SDK v1.17.0) Added support for crypto payout settlement. Related operations: [Create settlement request](/payments/en/api-references/payment/create-settlement-request), [List crypto addresses](/payments/en/api-references/payment/list-crypto-addresses). | 2025-06-18 |
+| **Refunds** | (SDK v1.17.0) [Create refund order](/payments/en/api-references/payment/create-refund-order) added developer fee fields. You can charge developer fees to merchants during refunds. See [Handle Refund Requests](/payments/en/guides/create-orders#handle-refund-requests) for details. | 2025-06-18 |
+| **Payment Link** | (SDK v1.17.0) Added OAuth authentication operations for Checkout SDK: [Get Access Token](/v2/api-references/oauth/get-access-token), [Refresh Access Token](/v2/api-references/oauth/refresh-access-token). | 2025-06-18 |
+| **Funds Management** | Added support for crypto payout settlement method. | 2025-06-10 |
+| **Payment Link** | (Checkout SDK v1.1.0) Checkout SDK provides out-of-the-box payment frontend components with iframe embedding support for quick integration. | 2025-06-09 |
 
 ## May 2025
-| Product | Change description | Release date |
-|------|----------|----------|
-| **Payments App** | - App released, providing web interface for order management, settlement management, and merchant management | 2025-05-22 |
+
+| Feature | Change Description | Release Date |
+|---------|-------------------|--------------|
+| **Payments App** | App released, providing web interface for order management, settlement management, and merchant management. | 2025-05-22 |
 
 ## April 2025
 
-| Product | Change description | Release date |
-|------|----------|----------|
-| **Payments API** | API SDK v1.14.0 released. Changes as follows:<br/><br/>- Added payment-related core operations:<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Create and manage pay-in orders<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Handle refund requests<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Execute settlement operations<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Merchant information management<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Bank account management<br/>&nbsp;&nbsp;&nbsp;&nbsp;- Real-time exchange rate query<br/><br/>- Added payment-related [webhook events](/payments/en/guides/status-and-events) for real-time notifications of order, refund, and settlement status changes. | 2025-04-23 |
-
-
-
+| Feature | Change Description | Release Date |
+|---------|-------------------|--------------|
+| **Pay-in** | (SDK v1.14.0) Added create and manage pay-in orders feature. | 2025-04-23 |
+| **Refunds** | (SDK v1.14.0) Added refund request handling feature. | 2025-04-23 |
+| **Funds Management** | (SDK v1.14.0) Added settlement operations feature. | 2025-04-23 |
+| **Merchant Management** | (SDK v1.14.0) Added merchant information and bank account management features. | 2025-04-23 |
+| **Exchange Rates** | (SDK v1.14.0) Added real-time exchange rate query feature. | 2025-04-23 |
+| **Webhook** | (SDK v1.14.0) Added payment-related [webhook events](/payments/en/guides/status-and-events) for real-time notifications of order, refund, and settlement status changes. | 2025-04-23 |
 
 
 <Tip>Feel free to [share your feedback](https://forms.zohopublic.com/cobo/form/DocumentFeedbackForm/formperma/QvLOhxJv1_JMsJ-1dleZ8Itb_7rzN-LtgvsDdxosoVI) to improve our documentation!</Tip>
